loopfor.LoopFor.scala.error
Compilation error:
LoopFor:4: error: ambiguous reference to overloaded definition,
both method forward in class LoopFor of type (i: Int)Unit
and  method forward in class AbstractBuggle of type ()Unit
match expected type ?
  if (! isOverBaggle()) {forward ; compteur +=1 }
                         ^