loopfor.LoopFor.scala.code
var compteur = 0

for (stepper <- 1 to 8) {
  if (! isOverBaggle()) {forward ; compteur +=1 }
  else forward()
}
pickupBaggle()
for (stepper <- 1 to compteur) {
  backward() }
dropBaggle()